--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "tsc": "./node_modules/typescript/bin/tsc",
     "build": "tsc",
-    "dev": "tsc && nodemon build/index.js",
-    "start": "tsc && node build/index.js"
+    "dev": "npm run build && nodemon build/index.js",
+    "start": "npm run build && node build/index.js"
   },
   "keywords": [],
   "author": "",
