--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "fastify": "^3.27.4",
     "fastify-plugin": "^3.0.1",
+    "mongodb": "4.5",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
