--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fastify-plugin": "^3.0.1",
     "mongodb": "4.5",
     "mongoose": "^6.3.6",
+    "mqtt": "^4.3.7",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
